--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Music Player with GIF</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #000;
+            color: #fff;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            position: relative;
+        }
+        .gif {
+            width: 100%;
+            height: auto;
+        }
+        audio {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img class="gif" src="your-gif.gif" alt="GIF" />
+        <audio controls autoplay>
+            <source src="your-song.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
 
+    <script>
+        // Automatically play music when page loads
+        window.onload = () => {
+            const audio = document.querySelector('audio');
+            audio.play();
+        };
+    </script>
+</body>
+</html>
