--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="gif" src="your-gif.gif" alt="GIF" />
+        <img class="gif" src=ded0p9m-a48a350b-324d-41b0-8224-b5e3c34f77d9.gif="GIF" />
         <audio controls autoplay>
             <source src="your-song.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
