--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <title>Music Player with GIF</title>
     <style>
         body {
+            background-color: #000; /* Set background to black */
+            color: #fff; /* Text color white */
             font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #000;
-            color: #fff;
             margin: 0;
             padding: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
         .container {
-            position: relative;
+            text-align: center;
         }
         .gif {
             width: 100%;
@@ -22,12 +26,14 @@
         }
         audio {
             margin-top: 20px;
+            background-color: #000; /* Keeps the audio player black */
+            color: #fff; /* Text color inside the audio player */
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img class="gif" src=ded0p9m-a48a350b-324d-41b0-8224-b5e3c34f77d9.gif="GIF" />
+        <img class="gif" src= alt="GIF" />
         <audio controls autoplay>
             <source src="your-song.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
