--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="gif" src="my-animation.gif" alt="GIF" />
+        <img class="gif" src="ded0p9m-a48a350b-324d-41b0-8224-b5e3c34f77d9.gif" alt="GIF" />
         <audio controls autoplay>
             <source src="your-song.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
