--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
         <img class="gif" src="ded0p9m-a48a350b-324d-41b0-8224-b5e3c34f77d9.gif" alt="GIF" />
         <audio controls autoplay>
-            <source src="Gigi D'Agostino - L'Amour Toujours (ORIGINAL).mp3" type="audio/mpeg">
+            <source src="music.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
     </div>
